--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-  <title>iHERO: Interactive Human-oriented Exploration
-    and Supervision Under Scarce Communication</title>
+  <title>MoRoCo: Multi-operator-robot Coordination, Interaction and Exploration under Restricted Communication</title>
   <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
@@ -217,16 +216,9 @@ scale human-in-the-loop simulations and hardware experiments are performed over 
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
         <h2 id="request0" class="title is-3" style="text-align: center;">
-        Request Q-0: Bounded Latency
+        Spatial-temporal Tree of Data Flow
         </h2>
         <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Q0.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-      </div>
-
-      <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Request Q-1: Prioritized Regions
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Q1.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div>
   </div>
