--- a/index.html
+++ b/index.html
@@ -192,10 +192,6 @@ scale human-in-the-loop simulations and hardware experiments are performed over 
     <div class="hero-body">
       <div class="columns is-centered has-text-centered"></div>
         <h2 style="text-align: center" class="title is-3">Overall Framework</h2>
-<!--         <video poster="" id="tree" autoplay controls muted loop height="100%">
-          <!-- Your video here -->
-          <source src="static/videos/Framework.mp4" type="video/mp4">
-        </video> -->
        <img src="static/images/framework.png" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
           Illustration of the proposed framework MoRoCo, for the coordination, supervision and interaction of multi-operator
@@ -210,15 +206,15 @@ scale human-in-the-loop simulations and hardware experiments are performed over 
 <!-- End Overall Framework -->
 
 
-<!-- Request 0 & 1 -->
+<!-- Communication -->
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Spatial-temporal Tree of Data Flow
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Q0.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/comm_data.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div>
   </div>
