--- a/index.html
+++ b/index.html
@@ -219,109 +219,135 @@ scale human-in-the-loop simulations and hardware experiments are performed over 
     </div>
   </div>
 </section>
-<!-- End Request 0 & 1 -->
+<!-- End Communication -->
 
 
-<!-- Request 2 -->
-<section class="section">
-  <div class="container">
-    <h2 class="title is-3" style="text-align: center;">
-      Request Q-2: Dynamic Movement of Operator
-    </h2>
-    <div class="columns is-centered">
-
-      <div class="column is-full-width is-centered has-text-centered">
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Q2_0.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-      </div>
-
-      <div class="column is-full-width is-centered has-text-centered">
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Q2_1.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End Request 2 -->
-
-
-<!-- Overview & Scalabiity -->
+<!-- SDF -->
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Overview of System Performance
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/overview.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-      </div>
-
-      <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Scalability Analysis
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/Scalability.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/sdf_tree.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div>
   </div>
 </section>
-<!-- End Overview & Scalabiity -->
+<!-- End SDF -->
 
 
-<!-- Generalization -->
+<!-- SDF -->
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Failure Detection & Recovery
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/failure.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
-      </div>
-
-      <div class="column is-full-width is-centered has-text-centered">
-        <h2 id="request0" class="title is-3" style="text-align: center;">
-        Heterogeneous Fleet
-        </h2>
-        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/heterogeneous.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/scenario1-exp1.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div>
   </div>
 </section>
-<!-- End Generalization -->
+<!-- End SDF -->
 
 
-<!-- Real-Exp -->
+<!-- SDF -->
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
-      <div class="column is-full-width">
-        <h2 class="title is-3" style="text-align: center;">
-        Hardware Experiments
-        </h2>
-        
-            <br>
-            <div class="columns is-centered has-text-centered">
-              <video autoplay="" loop="" muted="" playsinline="" src="static/videos/real_exp.mp4" style="border: 1px solid #bbb; border-radius: 10px; width: 80%;"></video>
-            </div>
-      </div> 
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/scenario1-exp2.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+      </div>
     </div>
   </div>
 </section>
-<!-- End Real-Exp -->
+<!-- End SDF -->
 
 
-<!-- Paper poster -->
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Poster</h2>
-
-      <iframe  src="static/pdfs/poster.pdf" width="100%" height="550">
-          </iframe>
-        
+<!-- SDF -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/scenario2.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
       </div>
     </div>
-  </section>
-<!--End paper poster -->
+  </div>
+</section>
+<!-- End SDF -->
+
+
+<!-- SDF -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/scenario3.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End SDF -->
+
+
+<!-- SDF -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/scenario4.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End SDF -->
+
+
+<!-- SDF -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/comparisons.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End SDF -->
+
+
+<!-- SDF -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-full-width is-centered has-text-centered">
+        <!-- <h2 id="request0" class="title is-3" style="text-align: center;">
+        Communication Model
+        </h2> -->
+        <video controls="" autoplay="" loop="" muted="" playsinline="" src="static/videos/sliced_videos/hardware.mp4" poster="" style="border: 1px solid #bbb; border-radius: 10px; margin: 1.0%;"></video>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End SDF -->
 
 
 <!--BibTex citation -->
