--- a/index.html
+++ b/index.html
@@ -354,13 +354,13 @@ scale human-in-the-loop simulations and hardware experiments are performed over 
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>@inproceedings{tian2024ihero,
+      <!-- <pre><code>@inproceedings{tian2024ihero,
         title={iHERO: Interactive Human-oriented Exploration and Supervision Under Scarce Communication},
         author={Zhuoli Tian, Yuyang Zhang, Jinsheng Wei and Meng Guo},
         booktitle={Robotics: Science and systems (*RSS*), Delft, Netherlands},
         year={2024},
         organization={IEEE}
-      }</code></pre>
+      }</code></pre> -->
     </div>
 </section>
 <!--End BibTex citation -->
